# rctf-client

./: .gitignore  README.rst  pyproject.toml
rctf_client/: client.py  exceptions.py  util.py
rctf_client/cli/: __init__.py  challenges.py
rctf_client/gui/: __init__.py  challenges.py  components.py  header.py  profile.py  scoreboard.py
